fix: overflow video from container on about page

--- a/src/container/about/about.css
+++ b/src/container/about/about.css
@@ -5,7 +5,7 @@
 }
 
 .card-style {
-  /* background-color: red;  */
+  /* background-color: red; */
   border-radius: 10px;
   border: 2px solid blue;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
@@ -29,9 +29,9 @@
 }
 
 video {
-  width: 69vw !important;
+  max-width: 67rem;
   height: 550px;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 @media (max-width: 950px) {
